# Server

./: Cargo.toml  Rocket.toml
src/: lib.rs  main.rs
src/routes/: home.rs
src/utils/: jwt.rs
templates/: Home.html.tera
