[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = { version = "8", default-features = false }
rocket = { version = "=0.5.0-rc.3", features = ["secrets", "json"] }
rocket_dyn_templates = { version = "=0.1.0-rc.3", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
